2012-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Added support for image uploading.
	* twitter/account.py, twittytwister/twitter.py: Added support for
	  'update_with_image'.

2012-03-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Added support for fullscreen mode.
	* twitter/output.py, window.py: Save last IDs for cheking unread.
	* theme.py, view.py: Added an option for the Timeline font.
	* preferences.py: Added an option for the Timeline order.

2012-03-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/output.py: Added source filters.
	* twitter/tweetentry.py: Adds 'mine' class for user own messages.
	* view.py: Added support for dynamic loading of themes.

2012-03-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py, view.py: Added support for D&D URI links.

2012-03-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* key.png, key.svg, updatewindow.py: Added a protected icon.
	* twitter/tweetentry.py: Added support for full user name.

2012-02-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py: Added a menu item for adding filters.

2012-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* filters.py: Added a global filter.

2012-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0.1 release.

2012-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Added new Spanish (Spain) translation.  Thanks alexnmoya!
	* gfeedline: Renamed the product name from GNOME Feed Line to
	  GFeedLine (issue #1).

2012-02-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Removed redundant html decoding.

2012-02-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0 release.

2012-02-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py (UpdateWindow): Fixed update argument.
	* preferences.py (FeedSourceTreeview): Fixed button sensitiveness.

2012-02-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* et.po: Added new Estonian translation.  Thanks Rivo Zängov!